minor css fixes
* decrease table width on Information-RestrictFolder to avoid horizontal scrollbar
* on Information-RestrictFolder, vertically align info icon with h1 text

--- a/eggs/Naaya/Products/NaayaCore/AuthenticationTool/www/restrict_folder.css
+++ b/eggs/Naaya/Products/NaayaCore/AuthenticationTool/www/restrict_folder.css
@@ -4,11 +4,11 @@
 
 .overview_current_settings h1 img {
 	padding-right: 0px;
-    padding-bottom: 5px;
+  /*padding-bottom: 5px;*/
 }
 
 .overview_current_settings table {
-	width: 760px;
+	width: 720px; /*760px;*/
 	border: 1px solid #ddd;
 	border-collapse: collapse;
 }
